style.css
@font-face {
  font-family: KTFForma;
  src: url('fonts/KTF2101-Regular.otf');
}
@font-face {
  font-family: KTFForma;
  src: url("fonts/KTF2101-Bold.otf");
  font-weight: bold;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: KTFForma;
}

header {
  height: 100vh;
  background-image: url('images/bg.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 420px;
}

nav {
  display: flex;
  padding: 3.4vw 3.4vw 0 3.4vw;
  justify-content: space-between;
  font-size: 0.9em;
  letter-spacing: 0.03em;
}

.date {
  color: #fff;
}

.language {
  font-size: 0.9em;
  cursor: pointer;
  font-weight: bold;
}

.activeLanguage {
  color: #fff;
  cursor: default;
}

.about {
  padding-left: 3.4vw;
  position: absolute;
  display: flex;
  height: 50vh;
  bottom: 8vh;
}

.about h2 {
  font-size: 0.9em;
  width: 9.7vw;
  letter-spacing: 0.03em;
}

.english-text, .ukrainian-text, .german-text {
  column-count: 2;
  width: 63.5vw;
  height: 100%;
  text-align: left;
  column-fill: auto;
  word-break: keep-all;
  line-height: 116%;
}

.english-text {
  font-size: 0.8vw;
}

.ukrainian-text {
  font-size: 0.73vw;
}
.german-text{
  font-size: 0.707vw;
}

.about .links {
  display: flex;
  height: 100%;
  flex-direction: column;
}

.links .links-title {
  font-size: 0.9em;
  letter-spacing: 0.03em;
  margin-left: 1.6vw;
  text-decoration: none;
  color: black;
  font-weight: bold;
}


.logo {
  position: absolute;
  display: block;
  text-align: center;
  margin: 0 auto;
  right: 0;
  left: 0;
  bottom: 0;
}

.logo svg {
  width: 25vw;
  bottom: 0;
  height: auto;
}

.logo .logoukr {
  width: 27.2vw;
  height: auto;
  bottom: 0;
  margin-left: 1.6vw;
}


@media screen and (max-height: 735px) {
  .about {
    height: 55vh;
  }
}

@media screen and (max-height: 670px) {
  .about {
    height: 60vh;
  }
}

@media screen and (max-height: 615px) {
  .about {
    height: 65vh;
  }
}

@media screen and (max-height: 575px) {
  .about {
    height: 70vh;
  }
}


@media screen and (max-width: 1300px) {
  .about .english-text {
    font-size: 0.87vw;
  }
  .about .ukrainian-text {
    font-size: 0.81vw;
  }
  .about .german-text {
    font-size: 0.76vw;
  }
}

@media screen and (max-width: 1160px) {
  .about .ukrainian-text {
      font-size: 0.86vw;
    }
}

@media screen and (max-width: 1160px) {
  .about .german-text {
    font-size: 0.79vw;
  }
}

@media screen and (max-width: 1110px) {
  .about .english-text {
    font-size: 0.95vw;
  }   
}

@media screen and (max-width: 1060px) {
  .about .german-text {
    font-size: 0.86vw;
  }
}

@media screen and (max-width: 1015px) {
  .about .ukrainian-text {
    font-size: 0.93vw;
  }
}



@media screen and (max-width: 935px) {
  .about .english-text {
    font-size: 1.04vw;
  }
}
/* phone */
@media screen and (max-width: 900px) {
  header {
    background-image: url('images/bg_mobile.png');
    background-position: top;
    background-repeat: no-repeat;
    background-size: 100vw;
    height: auto;
    display: grid;
  }

  header nav {
    position: relative;
    font-size: 1.2em;
  }

  .about {
    position: relative;
    display: flex;
    flex-direction: column;
    height: auto;
    padding: 0 6vw;
    bottom: auto;
    order: 2;
    margin-top: 7vh;
  }

  .english-text, .ukrainian-text, .german-text {
    column-count: 1;
    width: 88vw;
    height: 100%;
    text-align: left;
    column-fill: auto;
    word-break: keep-all;
    line-height: 116%;
    font-size: 3.5vw !important;
  }

  .about h2 {
    display: none;
  }

  .logo {
    order: 1;
    position: relative;
    margin-top: 23vh;
  }

  .logo svg {
    width: 62vw;
  }

  .links {
    margin-top: 5vh;
    margin-bottom: 5vh;
  }

  .links .links-title {
    margin-bottom: 1vh;
    font-size: 3.5vw;
    margin-left: 0;
  }

  .curation td, .management td, .graphic-design td, .web-development td {
    padding-top: 20px !important;
  }
}

@media screen and (max-width: 450px) {
  .logo {
    margin-top: 10vh;
  }
  .about {
    margin-top: 5vh;
  }

}

@media screen and (max-height: 525px) and (min-width: 900px) {

  header {
    position: relative;
    height: 525px;
  }

  .about {
    height: 370px;
  }

  .logo {
    position: absolute;
    bottom: 0;

  }
}

